# src/routes/file/index.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 
-import { download, fetch, remove, upload } from './api';
+import { download, fetch, newFolder, remove, upload } from './api';
 
 const router = Router();
 
@@ -8,5 +8,6 @@ router.get('/meta', fetch);
 router.get('/', download);
 router.post('/', upload);
 router.delete('/', remove);
+router.get('/newFolder', newFolder);
 
 export default router;
